# qnx_screen_camera

./: CMakeLists.txt  README.md
camera/: camera_controller.hpp  camera_manager.hpp
main/: main.cpp
screen/: screen_attribute.hpp  screen_context.hpp  screen_window.hpp
